Packages_2024/gsl_2.7.1/gsl/gsl_linalg.inc

{$IFDEF read_interface}


type
  Pgsl_linalg_matrix_mod_t = ^Tgsl_linalg_matrix_mod_t;
  Tgsl_linalg_matrix_mod_t = longint;

const
  GSL_LINALG_MOD_NONE = 0;
  GSL_LINALG_MOD_TRANSPOSE = 1;
  GSL_LINALG_MOD_CONJUGATE = 2;

function gsl_linalg_matmult(A: Pgsl_matrix; B: Pgsl_matrix; C: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_matmult_mod(A: Pgsl_matrix; modA: Tgsl_linalg_matrix_mod_t; B: Pgsl_matrix; modB: Tgsl_linalg_matrix_mod_t; C: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_exponential_ss(A: Pgsl_matrix; eA: Pgsl_matrix; mode: Tgsl_mode_t): longint; cdecl; external libgsl;

function gsl_linalg_householder_transform(v: Pgsl_vector): double; cdecl; external libgsl;
function gsl_linalg_householder_transform2(alpha: Pdouble; v: Pgsl_vector): double; cdecl; external libgsl;
function gsl_linalg_complex_householder_transform(v: Pgsl_vector_complex): Tgsl_complex; cdecl; external libgsl;
function gsl_linalg_householder_hm(tau: double; v: Pgsl_vector; A: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_householder_mh(tau: double; v: Pgsl_vector; A: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_householder_hv(tau: double; v: Pgsl_vector; w: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_householder_left(tau: double; v: Pgsl_vector; A: Pgsl_matrix; work: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_householder_right(tau: double; v: Pgsl_vector; A: Pgsl_matrix; work: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_householder_hm1(tau: double; A: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_complex_householder_hm(tau: Tgsl_complex; v: Pgsl_vector_complex; A: Pgsl_matrix_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_householder_mh(tau: Tgsl_complex; v: Pgsl_vector_complex; A: Pgsl_matrix_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_householder_hv(tau: Tgsl_complex; v: Pgsl_vector_complex; w: Pgsl_vector_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_householder_left(tau: Tgsl_complex; v: Pgsl_vector_complex; A: Pgsl_matrix_complex; work: Pgsl_vector_complex): longint; cdecl; external libgsl;

function gsl_linalg_hessenberg_decomp(A: Pgsl_matrix; tau: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_hessenberg_unpack(H: Pgsl_matrix; tau: Pgsl_vector; U: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_hessenberg_unpack_accum(H: Pgsl_matrix; tau: Pgsl_vector; U: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_hessenberg_set_zero(H: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_hessenberg_submatrix(M: Pgsl_matrix; A: Pgsl_matrix; top: Tsize_t; tau: Pgsl_vector): longint; cdecl; external libgsl;

function gsl_linalg_hesstri_decomp(A: Pgsl_matrix; B: Pgsl_matrix; U: Pgsl_matrix; V: Pgsl_matrix; work: Pgsl_vector): longint; cdecl; external libgsl;

function gsl_linalg_SV_decomp(A: Pgsl_matrix; V: Pgsl_matrix; S: Pgsl_vector; work: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_SV_decomp_mod(A: Pgsl_matrix; X: Pgsl_matrix; V: Pgsl_matrix; S: Pgsl_vector; work: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_SV_decomp_jacobi(A: Pgsl_matrix; Q: Pgsl_matrix; S: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_SV_solve(U: Pgsl_matrix; Q: Pgsl_matrix; S: Pgsl_vector; b: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_SV_leverage(U: Pgsl_matrix; h: Pgsl_vector): longint; cdecl; external libgsl;

function gsl_linalg_LU_decomp(A: Pgsl_matrix; p: Pgsl_permutation; signum: Plongint): longint; cdecl; external libgsl;
function gsl_linalg_LU_solve(LU: Pgsl_matrix; p: Pgsl_permutation; b: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_LU_svx(LU: Pgsl_matrix; p: Pgsl_permutation; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_LU_refine(A: Pgsl_matrix; LU: Pgsl_matrix; p: Pgsl_permutation; b: Pgsl_vector; x: Pgsl_vector;
  work: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_LU_invert(LU: Pgsl_matrix; p: Pgsl_permutation; inverse: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_LU_invx(LU: Pgsl_matrix; p: Pgsl_permutation): longint; cdecl; external libgsl;
function gsl_linalg_LU_det(LU: Pgsl_matrix; signum: longint): double; cdecl; external libgsl;
function gsl_linalg_LU_lndet(LU: Pgsl_matrix): double; cdecl; external libgsl;
function gsl_linalg_LU_sgndet(lu: Pgsl_matrix; signum: longint): longint; cdecl; external libgsl;

function gsl_linalg_LU_band_decomp(M: Tsize_t; lb: Tsize_t; ub: Tsize_t; AB: Pgsl_matrix; piv: Pgsl_vector_uint): longint; cdecl; external libgsl;
function gsl_linalg_LU_band_solve(lb: Tsize_t; ub: Tsize_t; LUB: Pgsl_matrix; piv: Pgsl_vector_uint; b: Pgsl_vector;
  x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_LU_band_svx(lb: Tsize_t; ub: Tsize_t; LUB: Pgsl_matrix; piv: Pgsl_vector_uint; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_LU_band_unpack(M: Tsize_t; lb: Tsize_t; ub: Tsize_t; LUB: Pgsl_matrix; piv: Pgsl_vector_uint;
  L: Pgsl_matrix; U: Pgsl_matrix): longint; cdecl; external libgsl;

function gsl_linalg_complex_LU_decomp(A: Pgsl_matrix_complex; p: Pgsl_permutation; signum: Plongint): longint; cdecl; external libgsl;
function gsl_linalg_complex_LU_solve(LU: Pgsl_matrix_complex; p: Pgsl_permutation; b: Pgsl_vector_complex; x: Pgsl_vector_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_LU_svx(LU: Pgsl_matrix_complex; p: Pgsl_permutation; x: Pgsl_vector_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_LU_refine(A: Pgsl_matrix_complex; LU: Pgsl_matrix_complex; p: Pgsl_permutation; b: Pgsl_vector_complex; x: Pgsl_vector_complex;
  work: Pgsl_vector_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_LU_invert(LU: Pgsl_matrix_complex; p: Pgsl_permutation; inverse: Pgsl_matrix_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_LU_invx(LU: Pgsl_matrix_complex; p: Pgsl_permutation): longint; cdecl; external libgsl;
function gsl_linalg_complex_LU_det(LU: Pgsl_matrix_complex; signum: longint): Tgsl_complex; cdecl; external libgsl;
function gsl_linalg_complex_LU_lndet(LU: Pgsl_matrix_complex): double; cdecl; external libgsl;
function gsl_linalg_complex_LU_sgndet(LU: Pgsl_matrix_complex; signum: longint): Tgsl_complex; cdecl; external libgsl;

function gsl_linalg_QR_decomp(A: Pgsl_matrix; tau: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_decomp_old(A: Pgsl_matrix; tau: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_decomp_r(A: Pgsl_matrix; T: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_QR_solve(QR: Pgsl_matrix; tau: Pgsl_vector; b: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_solve_r(QR: Pgsl_matrix; T: Pgsl_matrix; b: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_svx(QR: Pgsl_matrix; tau: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_lssolve(QR: Pgsl_matrix; tau: Pgsl_vector; b: Pgsl_vector; x: Pgsl_vector; residual: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_lssolve_r(QR: Pgsl_matrix; T: Pgsl_matrix; b: Pgsl_vector; x: Pgsl_vector; work: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_QRsolve(Q: Pgsl_matrix; R: Pgsl_matrix; b: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_Rsolve(QR: Pgsl_matrix; b: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_Rsvx(QR: Pgsl_matrix; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_update(Q: Pgsl_matrix; R: Pgsl_matrix; w: Pgsl_vector; v: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_QTvec(QR: Pgsl_matrix; tau: Pgsl_vector; v: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_QTvec_r(QR: Pgsl_matrix; T: Pgsl_matrix; b: Pgsl_vector; work: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_Qvec(QR: Pgsl_matrix; tau: Pgsl_vector; v: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_QTmat(QR: Pgsl_matrix; tau: Pgsl_vector; A: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_QR_QTmat_r(QR: Pgsl_matrix; T: Pgsl_matrix; B: Pgsl_matrix; work: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_QR_matQ(QR: Pgsl_matrix; tau: Pgsl_vector; A: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_QR_unpack(QR: Pgsl_matrix; tau: Pgsl_vector; Q: Pgsl_matrix; R: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_QR_unpack_r(QR: Pgsl_matrix; T: Pgsl_matrix; Q: Pgsl_matrix; R: Pgsl_matrix): longint; cdecl; external libgsl;
function gsl_linalg_R_solve(R: Pgsl_matrix; b: Pgsl_vector; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_R_svx(R: Pgsl_matrix; x: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_rcond(QR: Pgsl_matrix; rcond: Pdouble; work: Pgsl_vector): longint; cdecl; external libgsl;

function gsl_linalg_complex_QR_decomp(A: Pgsl_matrix_complex; tau: Pgsl_vector_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_QR_decomp_r(A: Pgsl_matrix_complex; T: Pgsl_matrix_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_QR_solve(QR: Pgsl_matrix_complex; tau: Pgsl_vector_complex; b: Pgsl_vector_complex; x: Pgsl_vector_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_QR_solve_r(QR: Pgsl_matrix_complex; T: Pgsl_matrix_complex; b: Pgsl_vector_complex; x: Pgsl_vector_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_QR_svx(QR: Pgsl_matrix_complex; tau: Pgsl_vector_complex; x: Pgsl_vector_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_QR_lssolve(QR: Pgsl_matrix_complex; tau: Pgsl_vector_complex; b: Pgsl_vector_complex; x: Pgsl_vector_complex; residual: Pgsl_vector_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_QR_lssolve_r(QR: Pgsl_matrix_complex; T: Pgsl_matrix_complex; b: Pgsl_vector_complex; x: Pgsl_vector_complex; work: Pgsl_vector_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_QR_QHvec(QR: Pgsl_matrix_complex; tau: Pgsl_vector_complex; v: Pgsl_vector_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_QR_QHvec_r(QR: Pgsl_matrix_complex; T: Pgsl_matrix_complex; b: Pgsl_vector_complex; work: Pgsl_vector_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_QR_Qvec(QR: Pgsl_matrix_complex; tau: Pgsl_vector_complex; v: Pgsl_vector_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_QR_unpack(QR: Pgsl_matrix_complex; tau: Pgsl_vector_complex; Q: Pgsl_matrix_complex; R: Pgsl_matrix_complex): longint; cdecl; external libgsl;
function gsl_linalg_complex_QR_unpack_r(QR: Pgsl_matrix_complex; T: Pgsl_matrix_complex; Q: Pgsl_matrix_complex; R: Pgsl_matrix_complex): longint; cdecl; external libgsl;

function gsl_linalg_QR_band_decomp_L2(M: Tsize_t; p: Tsize_t; q: Tsize_t; AB: Pgsl_matrix; tau: Pgsl_vector): longint; cdecl; external libgsl;
function gsl_linalg_QR_band_unpack_L2(p: Tsize_t; q: Tsize_t; QRB: Pgsl_matrix; tau: Pgsl_vector; Qm: Pgsl_matrix;
  R: Pgsl_matrix): longint; cdecl; external libgsl;
